# self-driving-vehicle-101

./: .gitignore  PROJECT_OVERVIEW.md
14_integration_framework/: README.md
14_integration_framework/ros_ws/src/: CMakeLists.txt
14_integration_framework/ros_ws/src/algorithm_manager/: CMakeLists.txt  README.md  package.xml
14_integration_framework/ros_ws/src/algorithm_manager/config/: controllers.yaml
14_integration_framework/ros_ws/src/algorithm_manager/launch/: algorithm_manager.launch  stanley_placeholder.launch
14_integration_framework/ros_ws/src/algorithm_manager/scripts/: algorithm_switcher.py
14_integration_framework/ros_ws/src/experiment_orchestrator/: CMakeLists.txt  README.md  package.xml
14_integration_framework/ros_ws/src/experiment_orchestrator/config/: experiments.yaml
14_integration_framework/ros_ws/src/experiment_orchestrator/launch/: experiment.launch
14_integration_framework/ros_ws/src/experiment_orchestrator/scripts/: experiment_orchestrator.py
14_integration_framework/ros_ws/src/simulation_bringup/: CMakeLists.txt  README.md  package.xml
14_integration_framework/ros_ws/src/simulation_bringup/config/: environments.yaml  smart_control_config.yaml  vehicles.yaml
14_integration_framework/ros_ws/src/simulation_bringup/launch/: simulation_bringup.launch  spawn_xacro.launch  stage04_box_demo.launch  stage05_basic_car.launch  stage06_3d_car.launch  stage07_controlled_car.launch  stage08_cmdvel_car.launch
14_integration_framework/ros_ws/src/simulation_bringup/models/stage06_3d_car/urdf/: smart_3d.xacro
14_integration_framework/ros_ws/src/simulation_bringup/models/stage07_controlled_car/urdf/: smart_controlled.xacro
14_integration_framework/ros_ws/src/simulation_bringup/scripts/: cmdvel2gazebo.py  environment_loader.py
14_integration_framework/tests/: README.md  stage04_box_demo.sh  stage05_basic_car.sh  stage06_3d_car.sh  stage07_controlled_car.sh  stage08_cmdvel_car.sh
integration_dev_records/: v0.1.md  v0.2.md  v0.3.md
