<?xml version="1.0"?>
<package format="2">
  <name>algorithm_manager</name>
  <version>0.1.0</version>
  <description>Configurable path tracking algorithm switcher for the integrated self-driving stack.</description>

  <maintainer email="todo@example.com">TODO</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>

  <export>
  </export>
</package>
