<?xml version="1.0"?>
<package format="2">
  <name>experiment_orchestrator</name>
  <version>0.1.0</version>
  <description>Bind environment, vehicle, controller, parameters and logging targets into reproducible experiments.</description>

  <maintainer email="todo@example.com">TODO</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <export>
  </export>
</package>
